# podcast-summarizer

./: .gitignore
backend/: crewai_flow.html  main.py  output.txt  pyproject.toml
backend/crew_models/: summarizer_crew.py  summarizer_flow.py
backend/crew_models/config/: agents.yaml  tasks.yaml
backend/models/: Summarize.py
backend/server/: server.py
backend/tests/: chunk_summary.txt  summary.txt  transcript.test.py  transcript_test.py
backend/utils/: transcript.py
